3.38
------
* fix request export for superusers


3.37
------
* fund reservation light serializer


3.36
------
* fixed office
* amend email notification export


3.35
------
* reset migrations


3.34.1
------
* FM On-track: fixed locations
* FM Question: fixed locations


3.34
------
* PRP attachments improvements
* FM On-track: fixed locations
* FM Question: fixed locations
* fr tweaks


3.33
------
* export tweaks
* update requirements
* fix fund reservation
* amend FM question service


3.32.1
------
* fix permission issues


3.32
------
* export tweaks
* updates to eTools 9.11


3.31.2
------
* data report fix target

3.31.1
------
* engagements: use display status

3.31
------
* travel activity: create record also without location


3.30
------
* engagemements: added sections


3.29.2
------
* fixed hact history service (liquidation & cash transfer)


3.29.1
------
* fixed hact history service (totals by quarter)


3.29
------
* PRP progress report amend


3.28.3
------
* fixed admin template


3.28.2
------
* fmquestion: fixed overall finding


3.28.1
------
* fmontrack: fixed narrative finding


3.28
------
* tweaked fm questions


3.27.3
------
* missing fix


3.27.2
------
* added mr requirements for engagements


3.27.1
------
* fixed partner HACT


3.27
------
* updated to eTools 9.8
* added partner HACT


3.26
------
* added new export notification
* amend progress report service
* amend audit result service


3.25
------
* FmOnTrack: added programme areas
* FAM: added auditor vendor info


3.24
------
* added partner flags


3.23.1
------
* report indicator fix


3.23
----
* fix datareport


3.22
----
* schema update


3.21
----
* prp v2


3.20
----
* prp tweaks


3.19
----
* psea: added cso type


3.18.1
------
* fixed latitude


3.18
-----
* added support to django 3.2
* added location site endpoint
* added psea assessment and answer endpoints


3.17
-----
* tweaks to fmquestions


3.16
-----
* moved to python 3.9


3.15
-----