@@ -1,6 +1,7 @@
 3.38
 ------
 * fix request export for superusers
+* amend fund reservation light serializer
 
 
 3.37
